Added preauthorization, role-based authentication for application entry points.